--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "start": "node index.js"
   },
   "author": "satomi",
   "license": "ISC",
@@ -12,3 +14,4 @@
     "discord.js": "^12.5.1"
   }
 }
+
